# Remaster-Backend-V2

./: .gitignore  main.spec  pyproject.toml
resources/: athletics.xls  computer-sport.xls  doping-athletes.xlsx  order.docx  orders.docx  programming.xls  remaster.db  Шаблон_приказа.docx
scripts/: create_db.py  import_organizations.py
src/: main.py  modified.docx
src/core/: methods.py
src/general/: routers.py
src/modules/athletes/: api.py  schemes.py
src/modules/athletes/general/: routers.py
src/modules/athletes/modules/athlete/: api.py  schemes.py
src/modules/athletes/modules/file/: api.py  schemes.py
src/modules/databases/: api.py  methods.py  schemes.py
src/modules/documents/: api.py  schemes.py
src/modules/documents/general/: routers.py
src/modules/documents/modules/athletes/: api.py  schemes.py
src/modules/documents/modules/document/: api.py  schemes.py
src/modules/documents/modules/documents/: api.py  schemes.py
src/modules/documents/modules/file/: api.py  schemes.py
src/modules/documents/modules/orders/: api.py  methods.py  sсhemes.py
src/modules/doping_athletes/: api.py  schemes.py
src/modules/modules/general/: routers.py
src/modules/modules/modules/athletics_place/: api.py  schemes.py
src/modules/modules/modules/athletics_result/: api.py  schemes.py
src/modules/modules/modules/computer_sports/: api.py  (+1 more)
src/modules/municipalities/: api.py  schemes.py
src/modules/organizations/: api.py  schemes.py
src/modules/sports/: api.py  schemes.py
src/modules/sports/general/: routers.py
src/modules/spots/: api.py  schemes.py
(+10 files in other folders)
